index 놀이시설 → 놀이시설 검색 연결 / 유채원 / 14:14 [주요내용] - index 놀이시설 클릭 시, 해당 놀이시설이 검색된 화면으로 이동 	index.html, index.css, HomeController.java, 	playground.html, PlaygroundController.java, 	PlaygroundService.java, PlaygroundMapper.java, playground-mapper.xml

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -173,6 +173,16 @@ body {
     object-fit: cover;
     border-radius: 50%;
 }
+#welfare .facility-name h3 {
+	width: 185px;
+	margin-top: 1rem;
+	margin-bottom: 0;
+	color: #fff;
+	text-align: center;
+	overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 
 
 /* 공지사항, 주요뉴스 */
