--- a/src/main/resources/templates/playground.html
+++ b/src/main/resources/templates/playground.html
@@ -115,9 +115,9 @@
 	                  <option value="광주" th:selected="${#strings.equals(param.city, '광주')}">광주광역시</option>
 	                  <option value="대전" th:selected="${#strings.equals(param.city, '대전')}">대전광역시</option>
 	                  <option value="울산" th:selected="${#strings.equals(param.city, '울산')}">울산광역시</option>
-	                  <option value="세종특별" th:selected="${#strings.equals(param.city, '세종특별')}">세종특별자치시</option>
-	                  <option value="경기도" th:selected="${#strings.equals(param.city, '경기도')}">경기도</option>
-	                  <option value="강원도" th:selected="${#strings.equals(param.city, '강원도')}">강원도</option>
+	                  <option value="세종" th:selected="${#strings.equals(param.city, '세종')}">세종특별자치시</option>
+	                  <option value="경기" th:selected="${#strings.equals(param.city, '경기')}">경기도</option>
+	                  <option value="강원" th:selected="${#strings.equals(param.city, '강원')}">강원도</option>
 	                  <option value="충청북도" th:selected="${#strings.equals(param.city, '충청북도')}">충청북도</option>
 	                  <option value="충청남도" th:selected="${#strings.equals(param.city, '충청남도')}">충청남도</option>
 	                  <option value="전라북도" th:selected="${#strings.equals(param.city, '전라북도')}">전라북도</option>
@@ -135,7 +135,7 @@
                 <div class="col-md-5 ms-3">
                   <div class="input-group d-none d-lg-flex">
                     <i class="ci-search"></i>
-                    <input type="text" class="form-control rounded ps-5 me-2" id="searchValue" name="searchValue" th:value="${param.searchValue}" placeholder="놀이시설을 검색하세요.">
+                    <input type="text" class="form-control rounded ps-5 me-2" id="searchValue" name="searchValue" th:value="${param.no} != null ? ${playground.pgName} : ${param.searchValue}" placeholder="놀이시설을 검색하세요.">
                     <button class="btn btn-primary rounded fs-base py-0" type="submit" id="bt2">검색하기</button>
                   </div>
                 </div>
