mypage - 회원정보 수정(완) / 조규완 / 02-14 14:40 [상세내용] mypage - 회원정보 수정 완료 claim.java - knName 추가

--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -134,12 +134,49 @@
 									</div>
 								</li>
 								</th:block>
-								 <th:block th:if="${session.loginMember.role != 'ROLE_USER'}">
+								 <th:block th:if="${session.loginMember.role == 'ROLE_T'}">
 								 <li class="border-bottom mb-0">
 									<div class="cgw3 d-flex align-items-center px-4 py-3">
 										<i class="ci-user opacity-60 me-2"></i>회원정보 수정
 									</div>
 								</li>
+								<li class="border-bottom mb-0"><a
+									class="nav-link-style d-flex align-items-center px-4 py-3"
+									th:href="@{/mypage-4}"><i class="ci-edit opacity-60 me-2"></i>불편사항
+										신고 조회<span class="fs-sm text-muted ms-auto">[[${claimCount}]]</span></a></li>
+								<li class="border-bottom mb-0"><a
+									class="nav-link-style d-flex align-items-center px-4 py-3"
+									th:href="@{/mypage-5}"><i class="ci-document opacity-60 me-2"></i>내가
+										쓴 게시글<span class="fs-sm text-muted ms-auto">[[${boardCount}]]</span></a></li>
+								<li class="border-bottom mb-0"><a
+									class="nav-link-style d-flex align-items-center px-4 py-3"
+									th:href="@{/mypage-6}"><i class="ci-bag opacity-60 me-2"></i>대여
+										내역 조회<span class="fs-sm text-muted ms-auto">[[${rentalCount}]]</span></a></li>
+								<li class="border-bottom mb-0"><a
+									class="nav-link-style d-flex align-items-center px-4 py-3"
+									th:href="@{/mypage-7}"><i class="ci-cart opacity-60 me-2"></i>장바구니<span
+										class="fs-sm text-muted ms-auto">[[${cartCount}]]</span></a></li>
+								<li class="border-bottom mb-0">
+									<div class="nav-link-style d-flex align-items-center px-4 py-2">
+										<a class="fs-sm ms-auto btn btn-logout btn-sm" th:href="@{/logout}"><i
+											class="ci-sign-out me-2"></i>로그아웃</a>
+									</div>
+								</li>
+								</th:block>
+								<th:block th:if="${session.loginMember.role == 'ROLE_ADMIN'}">
+								<li class="border-bottom mb-0">
+									<div class="cgw3 d-flex align-items-center px-4 py-3">
+										<i class="ci-user opacity-60 me-2"></i>회원정보 수정
+									</div>
+								</li>
+								<li class="border-bottom mb-0"><a
+									class="nav-link-style d-flex align-items-center px-4 py-3"
+									th:href="@{/mypage-2}"><i class="ci-edit opacity-60 me-2"></i>입소
+										신청 조회<span class="fs-sm text-muted ms-auto">[[${admissionCount}]]</span></a></li>
+								<li class="border-bottom mb-0"><a
+									class="nav-link-style d-flex align-items-center px-4 py-3"
+									th:href="@{/mypage-3}"><i class="ci-heart opacity-60 me-2"></i>찜<span
+										class="fs-sm text-muted ms-auto">[[${wishCount}]]</span></a></li>
 								<li class="border-bottom mb-0"><a
 									class="nav-link-style d-flex align-items-center px-4 py-3"
 									th:href="@{/mypage-4}"><i class="ci-edit opacity-60 me-2"></i>불편사항
@@ -281,7 +318,7 @@
 							</div>
 							</th:block>
 							<!--선생님-->
-							<th:block th:if="${session.loginMember.role != 'ROLE_USER'}">
+							<th:block th:if="${session.loginMember.role == 'ROLE_T'}">
 							<div class="col-sm-6">
 								<th:block th:if="${session.loginMember.field == '유치원'}">
 								<label class="form-label" for="checkout-country">소속</label> 
@@ -301,6 +338,10 @@
 									코드</label> <input class="form-control-cgw1" type="text" name="fieldCd"
 									id="account-phone" th:value="${session.loginMember.fieldCd}">
 							</div>
+							</th:block>
+							<!--관리자-->
+							<th:block th:if="${session.loginMember.role == 'ROLE_ADMIN'}">
+							
 							</th:block>
 							<div class="col-12">
 								<hr class="mt-2 mb-3">
