--- a/src/main/resources/templates/playground.html
+++ b/src/main/resources/templates/playground.html
@@ -135,7 +135,7 @@
                 <div class="col-md-5 ms-3">
                   <div class="input-group d-none d-lg-flex">
                     <i class="ci-search"></i>
-                    <input type="text" class="form-control rounded ps-5 me-2" id="searchValue" name="searchValue" th:value="${param.no} != null ? ${playground.pgName} : ${param.searchValue}" placeholder="놀이시설을 검색하세요.">
+                    <input type="text" class="form-control rounded ps-5 me-2" id="searchValue" name="searchValue" th:value="${param.searchValue}" placeholder="놀이시설을 검색하세요.">
                     <button class="btn btn-primary rounded fs-base py-0" type="submit" id="bt2">검색하기</button>
                   </div>
                 </div>
