--- a/src/main/resources/templates/view-notice.html
+++ b/src/main/resources/templates/view-notice.html
@@ -121,7 +121,7 @@
              
               
             
-              <div class="text-end mt-3 zindex-10">
+              <div class="text-end mt-3">
                 <button class="bbtn2 btn-outline-ppink" type="button" id="btnUpdate">수 정</button>
                 <button class="bbtn2 btn-outline-ppink" type="button" id="btnDelete">삭 제</button>
                 <a class="bbtn2 btn-outline-ppink " href="notice.html">글목록</a>
