--- a/src/main/resources/templates/view-community.html
+++ b/src/main/resources/templates/view-community.html
@@ -132,9 +132,6 @@
         			<button class="bbtn2 btn-outline-ppink" type="button" id="btnDelete">삭 제</button>
         			<button class="bbtn2 btn-outline-ppink" type="button" ><i class="ci-thumb-up-filled"></i></button>
         		</div>
-        		<div class="text-end mt-3" th:if="${session.loginMember == null}">
-        			<button class="bbtn2 btn-outline-ppink" type="button" ><i class="ci-thumb-up-filled"></i></button>
-        		</div>
         		<br>
         		<div class="container-sm mt-3 mb-2">
         			<table>
@@ -200,12 +197,12 @@
 <script>
 	$(document).ready(() => {
 		$("#btnUpdate").on("click", (e) => {
-			location.href = "/community/update?no=[[${board.boardNo}]]";
+			location.href = "/community/update?no=[[${board.boardNo}]]&type=[[${type}]]";
 		});
 		
 		$("#btnDelete").on("click", (e) => {
 			if(confirm("정말로 게시글을 삭제 하시겠습니까?")) {
-				location.replace("/community/delete?boardNo=[[${board.boardNo}]]");
+				location.replace("/community/delete?boardNo=[[${board.boardNo}]]&type=[[${type}]]");
 			}
 		});
 	});
